--- a/resources/assets/sass/_photoCnt.scss
+++ b/resources/assets/sass/_photoCnt.scss
@@ -18,3 +18,20 @@
       }
    }
 }
+
+.add_element{
+
+   input{
+      width: 100%;
+      margin-bottom: 20px;
+   }
+
+   textarea{
+      margin-bottom: 20px;
+   }
+
+   input[type=submit]{
+      width: 100px;
+   }
+
+}
